force-app/main/default/objects/MCP_Test_Manifest__c/MCP_Test_Manifest__c.object-meta.xml
<CustomObject>
    <description>Internal test infrastructure. Maps adversarial seeded records to their payload type and honeytoken value. Not granted via the Enable_Claude_MCP_Connector permission set.</description>
    <label>MCP Test Manifest</label>
    <nameField>
        <displayFormat>MTM-{0000}</displayFormat>
        <label>Manifest Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MCP Test Manifests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>