force-app/main/default/objects/MCP_Test_Manifest__c/fields/Honeytoken_Value__c.field-meta.xml
<CustomField>
    <fullName>Honeytoken_Value__c</fullName>
    <externalId>true</externalId>
    <label>Honeytoken Value</label>
    <length>80</length>
    <type>Text</type>
</CustomField>