force-app/main/default/objects/MCP_Test_Manifest__c/fields/Payload_Type__c.field-meta.xml
<CustomField>
    <fullName>Payload_Type__c</fullName>
    <label>Payload Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Test_Payload_Type</valueSetName>
    </valueSet>
</CustomField>