force-app/main/default/objects/MCP_Test_Manifest__c/fields/Target_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Target_Object_Type__c</fullName>
    <label>Target Object Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Outreach_Log__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>