force-app/main/default/objects/MCP_Test_Manifest__c/fields/Target_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_Record_Id__c</fullName>
    <externalId>true</externalId>
    <label>Target Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>